Apply suggestions from code review
Co-Authored-By: 1011X <1011X@users.noreply.github.com>

--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -59,7 +59,10 @@
         %li
           Florence-Mastodon
           %span.pull-right= @version
-        %li
+         %li
+           Mastodon
+           %span.pull-right= @masto_version
+         %li
           Ruby
           %span.pull-right= "#{RUBY_VERSION}p#{RUBY_PATCHLEVEL}"
         %li
