--- a/app/views/admin/dashboard/index.html.haml
+++ b/app/views/admin/dashboard/index.html.haml
@@ -57,7 +57,7 @@
       %h4= t 'admin.dashboard.software'
       %ul
         %li
-          Florence-Mastodon
+          Florence
           %span.pull-right= @version
         %li
            Mastodon
